kubernetes/admin.yaml

# Create admin api deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: detectron-admin-deployment
  namespace: gic7
spec:
  replicas: 3
  selector:
    matchLabels:
      app: detectron-admin
  strategy: {}
  template:
    metadata:
      labels:
        app: detectron-admin
    spec:
      containers:
        - env:
          - name: ADMIN_JAVA_OPTS
            value: '-Xmx8g'
          - name: EMAIL_FROM
          - name: EMAIL_HOST
          - name: EMAIL_PASSWORD
          - name: EMAIL_USERNAME
          - name: ENABLE_EMAIL_SERVER
          - name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: db-secret
                key: password
          - name: POSTGRES_URL
            value: 'jdbc:postgresql://my-release-postgresql-ha-pgpool:5432/postgres'
          - name: POSTGRES_USER
            value: postgres
          - name: SPRING_PROFILES_ACTIVE
            value: 'dev'
          image: registry.deti:5000/detectron-admin
          name: detectron-admin
          ports:
          - containerPort: 8080
          resources: {}
        
      restartPolicy: Always    
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchLabels:
                app: detectron-admin

# Create Service for admin api
---
apiVersion: v1
kind: Service
metadata:
  name: detectron-admin-service
  namespace: gic7
spec:
  ports:
  - port: 8000
    targetPort: 8080
  selector:
    app: detectron-admin
