kubernetes/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: detectron-db-deployment
  namespace: gic7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: detectron-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: detectron-db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: frs
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: postgres:11.5
          name: detectron-db
          ports:
          - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: detectron-db-data
              subPath: postgres
      restartPolicy: Always
      volumes:
        - name: detectron-db-data
          persistentVolumeClaim:
            claimName: detectron-db-data

# Create Service for database
---
apiVersion: v1
kind: Service
metadata:
  name: detectron-db-service
  namespace: gic7
spec:
  ports:
  - port: 5432
  selector:
    app: detectron-db
